# plug

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  compound-engineering.local.md  deny.toml  dist-workspace.toml  install.sh
.gemini/: tmp_technical_review.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.letta/claude/: conversations.json  session-d453ffc7-e53d-4546-9f63-7c0aa8f7a048.json
docs/: ARCHITECTURE.md  CLIENT-COMPAT.md  COMPETITIVE.md  CRATE-STACK.md  DECISIONS.md  FINAL-MILE-CHECKLIST.md  MCP-SPEC.md  OPERATOR-GUIDE.md  PLAN.md  PROJECT-STATE-SNAPSHOT.md  RELEASE-NOTES-2026-07-12-codex-5.6-sol.md  RELEASE-NOTES-2026-07-13-RMCP-2.2-codex-5.6-sol.md  RELEASE-NOTES-2026-07-17-MULTI-CLIENT-OAUTH-codex-5.6-sol.md  RESEARCH-BREADCRUMBS.md  RISKS.md  ROADMAP-AUDIT-2026-03-08.md  TRUTH-RULES.md  USERS.md  UX-DESIGN.md  VISION.md  WORKFLOW-OPERATING-MODEL.md  audit-2026-05-17.md  hardening-log.md
docs/audit/: BASELINE-2026-03-08.md  CLAIM-REGISTRY-2026-03-08.md  DOC-RECONCILIATION-2026-03-08.md  MAIN-TRUTH-MATRIX-2026-03-08.md  OFF-MAIN-STATE-2026-03-08.md
docs/brainstorms/: 2026-03-04-charm-style-ux-overhaul-brainstorm.md  2026-03-04-daemon-sharing-and-project-audit-brainstorm.md  2026-03-20-plug-trace-requirements.md  (+17 more)
plans/: 001-toolchain-ci-quick-wins-claude-fable.md  002-todo-readme-hygiene-claude-fable.md  003-correctness-small-fix-batch-claude-fable.md  004-catalog-perf-batch-claude-fable.md  005-artifact-async-write-claude-fable.md  006-ipc-proxy-characterization-tests-claude-fable.md  007-ipc-reconnect-state-replay-claude-fable.md  008-sse-replay-integrity-claude-fable.md  009-ipc-read-watchdog-claude-fable.md  010-subscription-registry-atomicity-claude-fable.md  011-reconnect-reload-interlock-claude-fable.md  012-grace-retire-task-tracking-claude-fable.md  013-oauth-supervision-e2e-tests-claude-fable.md  014-test-time-deflake-claude-fable.md  015-notification-fanout-dedup-claude-fable.md  016-daemon-module-split-claude-fable.md  017-dispatch-unification-design-claude-fable.md  018-downstream-oauth-conformance-spike-claude-fable.md  019-http-session-task-teardown-claude-fable.md  020-downstream-oauth-store-hardening-claude-fable.md  021-rmcp-version-pin-policy-claude-fable.md  022-plan-doc-dispatcher-truth-fix-claude-fable.md  023-catalog-family-concurrent-fetch-claude-fable.md  024-config-watcher-e2e-tests-claude-fable.md  EXECUTION-REPORT-claude-fable.md  FINAL-REPAIR-REPORT-codex-5.6-sol.md  README-claude-fable.md
plug/: Cargo.toml
plug-core/: Cargo.toml
plug-core/src/: artifacts.rs  auth.rs  branding.rs  circuit.rs  client_detect.rs  doctor.rs  dotenv.rs  engine.rs  enrichment.rs  error.rs  export.rs  fs_perm.rs  health.rs  icons.rs  import.rs  ipc.rs  lib.rs  mcp_http_headers.rs  notifications.rs  oauth.rs  protocol.rs  reload.rs  tasks.rs  tls.rs  tool_naming.rs  types.rs  watcher.rs
plug-core/src/config/: expand.rs  mod.rs
plug-core/src/dispatch/: mod.rs
plug-core/src/downstream_oauth/: mod.rs
plug-core/src/http/: error.rs  mod.rs  server.rs  session.rs  sse.rs
plug-core/src/proxy/: catalog.rs  completion.rs  handler.rs  mod.rs  subscriptions.rs  tasks.rs  tests.rs
plug-core/src/server/: mod.rs
plug-core/src/session/: mod.rs  stateful.rs
plug-core/src/transport/: mod.rs  sse_client.rs
plug-core/tests/: integration_tests.rs
plug-test-harness/: Cargo.toml
plug-test-harness/src/: lib.rs
plug/src/: daemon.rs  ipc_proxy.rs  main.rs  runtime.rs  ui.rs
plug/src/commands/: auth.rs  clients.rs  codesign.rs  config.rs  misc.rs  mod.rs  servers.rs  tools.rs
plug/src/daemon/: auth_status.rs  framing.rs  mcp_dispatch.rs  mod.rs  notify.rs  paths.rs  registry.rs
plug/src/tui/: app.rs  mod.rs  theme.rs
plug/src/tui/widgets/: activity.rs  clients.rs  doctor.rs  help.rs  logs.rs  mod.rs  servers.rs  tools.rs
plug/src/views/: clients.rs  mod.rs  overview.rs  servers.rs  tools.rs
scripts/: build-mcpb.sh  check-todo-status.sh  clean-build-artifacts.sh  dev-reinstall.sh  setup-codesigning.sh
todos/: 001-complete-p1-tool-call-correlation-bug.md  002-complete-p1-restart-server-ipc-noop.md  003-complete-p1-auth-check-fails-open.md  004-complete-p1-token-file-world-readable-window.md  005-complete-p2-remove-yagni-ipc-variants.md  005-pending-p2-remove-yagni-ipc-variants.md  006-complete-p2-remove-placeholder-modes.md  006-pending-p2-remove-placeholder-modes.md  007-complete-p2-symlink-attack-socket-path.md  007-pending-p2-symlink-attack-socket-path.md  008-complete-p2-write-frame-overflow.md  008-pending-p2-write-frame-overflow.md  009-complete-p2-restart-rate-limit-toctou.md  009-pending-p2-restart-rate-limit-toctou.md  010-complete-p2-stale-uptime-in-connection-context.md  010-pending-p2-stale-uptime-in-connection-context.md  011-complete-p2-ipc-request-debug-leaks-token.md  011-pending-p2-ipc-request-debug-leaks-token.md  012-complete-p2-activity-renders-all-1000-entries.md  012-pending-p2-activity-renders-all-1000-entries.md  013-complete-p2-arc-str-to-string-conversion.md  013-pending-p2-arc-str-to-string-conversion.md  014-complete-p2-cmd-status-starts-all-servers.md  014-pending-p2-cmd-status-starts-all-servers.md  015-complete-p2-full-refresh-incomplete.md  015-pending-p2-full-refresh-incomplete.md  016-complete-p2-ensure-dir-permissions-race.md  016-pending-p2-ensure-dir-permissions-race.md  017-complete-p3-search-only-in-dashboard-mode.md  017-pending-p3-search-only-in-dashboard-mode.md  018-complete-p3-dirty-flag-set-on-noop-events.md  018-pending-p3-dirty-flag-set-on-noop-events.md  019-complete-p3-dry-router-config-construction.md  019-pending-p3-dry-router-config-construction.md  020-complete-p3-tracing-init-blocks-daemon-logging.md  020-pending-p3-tracing-init-blocks-daemon-logging.md  021-complete-p1-ssrf-blocks-user-configured-local-servers.md  021-pending-p1-ssrf-blocks-user-configured-local-servers.md  022-complete-p1-split-timeout-startup-vs-call.md  022-pending-p1-split-timeout-startup-vs-call.md  (+74 more)
(+140 files in other folders)
