[package]
name = "plug-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for plug MCP multiplexer"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
arc-swap.workspace = true
uuid.workspace = true
directories.workspace = true
dashmap.workspace = true
futures.workspace = true
rustls.workspace = true

# HTTP Server (Phase 2)
axum.workspace = true
tower-http.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
tokio-util.workspace = true
http.workspace = true
bytes.workspace = true

# Import/Export (Phase 5)
dirs.workspace = true
toml.workspace = true

# Resilience (Phase 3)
backon.workspace = true
rand.workspace = true

# Legacy SSE upstream transport
reqwest.workspace = true
sse-stream.workspace = true

# File watching (Phase 5)
notify.workspace = true
notify-debouncer-mini.workspace = true

# Phase 4
subtle.workspace = true
hex.workspace = true
serde_yml.workspace = true

# OAuth token storage
keyring.workspace = true
fs2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower.workspace = true
plug-test-harness = { path = "../plug-test-harness" }
