[package]
name = "plug-test-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Test utilities and mock MCP server for plug integration tests"

[[bin]]
name = "mock-mcp-server"
path = "src/bin/mock-server.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
