[package]
name = "plug"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP multiplexer — one config, every AI client connected, every server shared"

[[bin]]
name = "plug"
path = "src/main.rs"

[dependencies]
plug-core = { path = "../plug-core" }
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
rand.workspace = true
reqwest.workspace = true
base64.workspace = true

# Daemon (Phase 4)
tracing-appender.workspace = true
fs2.workspace = true
subtle.workspace = true
hex.workspace = true
directories.workspace = true
uuid.workspace = true
dashmap.workspace = true
dirs.workspace = true
dialoguer = "0.12.0"
open = "5.3.3"
console = "0.16.2"
serde_yml.workspace = true
figment.workspace = true
toml.workspace = true
axum-server.workspace = true
rustls.workspace = true
oauth2.workspace = true

[dev-dependencies]
rcgen = "0.14"
tokio-rustls = { version = "0.26", default-features = false }
plug-test-harness = { path = "../plug-test-harness" }
